complete main page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221001125641">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221003081236">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,15 +54,158 @@
 							</div>
 						</div>
 					</section>
+					<section class="benefits" id="benefits">
+						<div class="benefits__wrapper">
+							<div class="benefits__data">
+								<span class="benefits__title benefits__title--clean">Clean</span>
+								<span class="benefits__title benefits__title--stable">Stable</span>
+								<span class="benefits__title benefits__title--performance">Performance</span>
+							</div>
+							<div class="benefits__devices">
+								<a href="#" class="benefits__device benefits__device-9r">
+									<div class="benefits__device-title">Oneplus 8T / 9R</div>
+									<div class="benefits__device-img"> <picture><source srcset="img/oneplus9r.webp" type="image/webp"><img src="img/oneplus9r.png" alt="image"></picture> </div>
+								</a>
+								<a href="#" class="benefits__device benefits__device-8">
+									<div class="benefits__device-title">Oneplus 8 / 8 pro</div>
+									<div class="benefits__device-img"> <picture><source srcset="img/oneplus8.webp" type="image/webp"><img src="img/oneplus8.png" alt="image"></picture> </div>
+								</a>
+								<a href="#" class="benefits__device benefits__device-9pro">
+									<div class="benefits__device-title">Oneplus 9 pro</div>
+									<div class="benefits__device-img"> <picture><source srcset="img/oneplus9pro.webp" type="image/webp"><img src="img/oneplus9pro.png" alt="image"></picture> </div>
+								</a>
+							</div>
+						</div>
+					</section>
+					<section class="faq" id="faq">
+						<div class="faq__wrapper">
+							<h2 class="faq__title">FAQ.</h2>
+							<div data-spollers class="spollers">
+								<div class="spollers__left">
+									<div class="spollers__item">
+										<button type="button" data-spoller class="spollers__title">How to use MSM Tool ?
+											<img class="spollers__arrow" src="img/arrow.svg" alt="arrow icon">
+										</button>
+										<div class="spollers__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aut
+											minima magnam illo, ullam inventore numquam! Illo quo tempore nostrum!</div>
+									</div>
+									<div class="spollers__item">
+										<button type="button" data-spoller class="spollers__title">How to Enter EDL Mode
+											<img class="spollers__arrow" src="img/arrow.svg" alt="arrow icon">
+										</button>
+										<div class="spollers__body">
+											<ul>
+												<li>Method 1: Physical buttons</li>
+												<li>Turn off your phone</li>
+												<li>Push volume up and volume down together</li>
+												<li>Connect the USB cable to your phone</li>
+												<li>Phone should boot to edl mode and screen stays black.</li>
+												<li>Method 2: using adb</li>
+												<li>Phone needs to be in recovery or in OS</li>
+												<li>From cmd issue command</li>
+											</ul>
+										</div>
+									</div>
+									<div class="spollers__item">
+										<button type="button" data-spoller class="spollers__title">Unlocking Bootloader
+											<img class="spollers__arrow" src="img/arrow.svg" alt="arrow icon">
+										</button>
+										<div class="spollers__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aut
+											minima magnam illo,
+											ullam inventore numquam! Illo quo tempore nostrum!</div>
+									</div>
+									<div class="spollers__item">
+										<button type="button" data-spoller class="spollers__title">OOS 12 Based Installation ( OP 8,8pro,8T/9R )
+											<img class="spollers__arrow" src="img/arrow.svg" alt="arrow icon">
+										</button>
+										<div class="spollers__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aut
+											minima magnam illo,
+											ullam inventore numquam! Illo quo tempore nostrum!</div>
+									</div>
+									<div class="spollers__item">
+										<button type="button" data-spoller class="spollers__title">OOS 12 Based Installation ( OP 9 , 9pro )
+											<img class="spollers__arrow" src="img/arrow.svg" alt="arrow icon">
+										</button>
+										<div class="spollers__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aut
+											minima magnam illo,
+											ullam inventore numquam! Illo quo tempore nostrum!</div>
+									</div>
+								</div>
+								<div class="spollers__right">
+									<div class="spollers__item">
+										<button type="button" data-spoller class="spollers__title">Links
+											<img class="spollers__arrow" src="img/arrow.svg" alt="arrow icon">
+										</button>
+										<div class="spollers__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aut
+											minima magnam illo, ullam inventore numquam! Illo quo tempore nostrum!</div>
+									</div>
+									<div class="spollers__item">
+										<button type="button" data-spoller class="spollers__title">Both slots ? what how ?
+											<img class="spollers__arrow" src="img/arrow.svg" alt="arrow icon">
+										</button>
+										<div class="spollers__body">
+											<ul>
+												<li>Method 1: Physical buttons</li>
+												<li>Turn off your phone</li>
+												<li>Push volume up and volume down together</li>
+												<li>Connect the USB cable to your phone</li>
+												<li>Phone should boot to edl mode and screen stays black.</li>
+												<li>Method 2: using adb</li>
+												<li>Phone needs to be in recovery or in OS</li>
+												<li>From cmd issue command</li>
+											</ul>
+										</div>
+									</div>
+									<div class="spollers__item">
+										<button type="button" data-spoller class="spollers__title">Fastboot Unkown Option --Disable-Verity
+											<img class="spollers__arrow" src="img/arrow.svg" alt="arrow icon">
+										</button>
+										<div class="spollers__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aut
+											minima magnam illo,
+											ullam inventore numquam! Illo quo tempore nostrum!</div>
+									</div>
+									<div class="spollers__item">
+										<button type="button" data-spoller class="spollers__title">ADB error cannot read “filename.zip”
+											<img class="spollers__arrow" src="img/arrow.svg" alt="arrow icon">
+										</button>
+										<div class="spollers__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aut
+											minima magnam illo,
+											ullam inventore numquam! Illo quo tempore nostrum!</div>
+									</div>
+									<div class="spollers__item">
+										<button type="button" data-spoller class="spollers__title">I’m in bootloop what to do now ?
+											<img class="spollers__arrow" src="img/arrow.svg" alt="arrow icon">
+										</button>
+										<div class="spollers__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aut
+											minima magnam illo,
+											ullam inventore numquam! Illo quo tempore nostrum!</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</section>
+					<footer class="footer">
+
+						<div class="footer__wrapper">
+							<div class="footer__logo">
+								<img src="img/logo.svg" alt="logo">
+								<span>X</span>
+								<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M24 8.84782L13.6949 11.4367C13.508 11.4831 13.3422 11.5889 13.2239 11.7374C13.1055 11.8859 13.0412 12.0687 13.0412 12.2569C13.0412 12.445 13.1055 12.6278 13.2239 12.7763C13.3422 12.9249 13.508 13.0307 13.6949 13.077L23.9978 15.6463C23.9978 17.9903 23.0439 20.2383 21.3458 21.8965C19.6477 23.5548 17.3442 24.4875 14.9415 24.4898H7.33029C5.83215 24.4898 4.39536 23.9092 3.33601 22.8758C2.27667 21.8424 1.68153 20.4407 1.68153 18.9792H13.8978C14.0513 18.969 14.1965 18.9075 14.3089 18.8051C14.4213 18.7027 14.4941 18.5656 14.5151 18.4169C14.536 18.2683 14.5038 18.1171 14.4239 17.9889C14.344 17.8607 14.2212 17.7633 14.0762 17.7131L1.80419 14.3584C-0.537384 13.7058 -0.622126 10.5056 1.68153 9.74633L15.0039 6.43082C15.1165 6.40212 15.2144 6.33451 15.2797 6.24054C15.3449 6.1466 15.3728 6.03274 15.3584 5.92016C15.3439 5.80758 15.288 5.70397 15.2011 5.62861C15.1141 5.55328 15.0021 5.51133 14.8858 5.5106H1.68153C1.68153 4.04909 2.27667 2.64744 3.33601 1.61401C4.39536 0.580577 5.83215 0 7.33029 0H14.9415C17.345 0.0028826 19.6491 0.936333 21.3475 2.59531C23.046 4.25429 24 6.50312 24 8.84782Z" fill="#060606" />
+								</svg>
+							</div>
+							<div class="footer__description">
+								Created with Love Nameless X Team Devoart
+							</div>
+						</div>
+
+
+					</footer>
 				</div>
 
 			</div>
-
 		</main>
-		<footer class="footer">
-			<div class="footer__container">
-			</div>
-		</footer>
+
 	</div>
 	<!-- <div id="popup" aria-hidden="true" class="popup">
 	<div class="popup__wrapper">
@@ -74,7 +217,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20221001125641"></script>
+	<script src="js/app.min.js?_v=20221003081236"></script>
 </body>
 
 </html>
